--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>io.github.SaptarshiSarkar12</groupId>
-    <artifactId>updateEdge</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>EdgeUpdateService</artifactId>
+    <version>1.0.0</version>
 
     <properties>
         <maven.compiler.source>23</maven.compiler.source>
@@ -25,9 +25,8 @@
                         <version>0.10.5</version>
                         <extensions>true</extensions>
                         <configuration>
-                            <imageName>Drifty CLI</imageName>
-                            <mainClass>main.UpdateEdgeApp</mainClass>
-                            <outputDirectory>target/CLI/windows</outputDirectory>
+                            <imageName>EUS</imageName>
+                            <mainClass>main.EdgeUpdateService</mainClass>
                             <buildArgs>
                                 <buildArg>--enable-url-protocols=https</buildArg>
                                 <buildArg>--enable-url-protocols=http</buildArg>
@@ -71,7 +70,7 @@
                                         <argument>-classpath</argument>
                                         <classpath/>
                                         <argument>-agentlib:native-image-agent=config-merge-dir=${project.basedir}/src/main/resources/META-INF/native-image</argument>
-                                        <argument>main.UpdateEdgeApp</argument>
+                                        <argument>main.EdgeUpdateService</argument>
                                     </arguments>
                                 </configuration>
                             </execution>
