fix: Fixed creation of service file and requires admin privileges
Signed-off-by: Saptarshi Sarkar <saptarshi.programmer@gmail.com>

--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
                         <version>0.10.5</version>
                         <extensions>true</extensions>
                         <configuration>
-                            <imageName>EUS</imageName>
+                            <imageName>eus</imageName>
                             <mainClass>main.EdgeUpdateService</mainClass>
                             <buildArgs>
                                 <buildArg>--enable-url-protocols=https</buildArg>
