--- a/.github/workflows/buildAndRelease.yml
+++ b/.github/workflows/buildAndRelease.yml
@@ -62,6 +62,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
+      - uses: actions/checkout@v4
+        if: ${{ github.event_name == 'workflow_dispatch' }}
       - name: Download EUS binary
         uses: actions/download-artifact@v4
         with:
